# identificador-pii

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  steps.txt
docs/: index.md
docs/API/: identificador.md  utils.md
identificador_pii/: __init__.py  identificador.py  patterns.json  teste.ipynb  utils.py
